#13 - Ensure flyout doesn't spill out of view + reset UL margin/padding + default test content for local server

--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -21,10 +21,12 @@
     ul {
         overflow: hidden;
         list-style: none;
+        display: flex;
+        padding: 0;
+        margin: 0;
     }
 
     li {
-        float: left;
         list-style: none;
     }
 
